[package]
name = "lj"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
dialoguer = "0.11"
indicatif = "0.17"
futures-util = "0.3"
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }
console = "0.15"

[profile.release]
strip = true
lto = true
