[package]
name = "lj"
version = "0.1.0"
edition = "2024"
description = "CLI tool to download magnets via Real-Debrid"
license = "MIT"
repository = "https://github.com/mat-lo/lj"
keywords = ["torrent", "magnet", "real-debrid", "download", "cli"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
dialoguer = "0.11"
futures-util = "0.3"
nix = { version = "0.29", features = ["signal", "process"] }
console = "0.15"

[profile.release]
strip = true
lto = true
